--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,38 @@
+annotated-types==0.6.0
+asn1crypto==1.5.1
+atpublic==4.1.0
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+cloudpickle==2.2.1
+cryptography==42.0.5
+filelock==3.13.3
 idna==3.6
 markdown-it-py==3.0.0
 mdurl==0.1.2
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.1
+platformdirs==3.11.0
+pycparser==2.21
+pydantic==2.6.4
+pydantic_core==2.16.3
 Pygments==2.17.2
+PyJWT==2.8.0
+pyOpenSSL==24.1.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
 requests==2.31.0
 rich==13.7.1
+six==1.16.0
+snowflake==0.7.0
+snowflake-connector-python==3.7.1
+snowflake-snowpark-python==1.14.0
+snowflake._legacy==0.7.0
+snowflake.core==0.7.0
+sortedcontainers==2.4.0
+tomlkit==0.12.4
+typing_extensions==4.10.0
+tzdata==2024.1
 urllib3==2.2.1
