Struggling to get it up to Snowflake :(

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.3.2
 cloudpickle==2.2.1
 cryptography==42.0.5
 filelock==3.13.3
+greenlet==3.0.3
 idna==3.6
 markdown-it-py==3.0.0
 mdurl==0.1.2
@@ -29,9 +30,11 @@ six==1.16.0
 snowflake==0.7.0
 snowflake-connector-python==3.7.1
 snowflake-snowpark-python==1.14.0
+snowflake-sqlalchemy==1.5.1
 snowflake._legacy==0.7.0
 snowflake.core==0.7.0
 sortedcontainers==2.4.0
+SQLAlchemy==1.4.52
 tomlkit==0.12.4
 typing_extensions==4.10.0
 tzdata==2024.1
