--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
 altair==5.3.0
 annotated-types==0.6.0
 asn1crypto==1.5.1
+async-timeout==4.0.3
 atpublic==4.1.0
 attrs==23.2.0
 blinker==1.7.0
@@ -12,6 +15,7 @@ click==8.1.7
 cloudpickle==2.2.1
 cryptography==42.0.5
 filelock==3.13.3
+frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.42
 greenlet==3.0.3
@@ -22,6 +26,7 @@ jsonschema-specifications==2023.12.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+multidict==6.0.5
 numpy==1.26.4
 packaging==23.2
 pandas==2.2.1
@@ -64,3 +69,4 @@ tzdata==2024.1
 urllib3==2.2.1
 watchdog==4.0.0
 XlsxWriter==3.2.0
+yarl==1.9.4
