--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ Pygments==2.17.2
 PyJWT==2.8.0
 pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 referencing==0.34.0
