--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,9 @@ idna==3.6
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
 multidict==6.0.5
 numpy==1.26.4
 packaging==23.2
@@ -36,6 +38,7 @@ pycparser==2.21
 pydantic==2.6.4
 pydantic_core==2.16.3
 pydeck==0.8.1b0
+Pygments==2.17.2
 PyJWT==2.8.0
 pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
